Fix 'Sequence diagram - on reload file - app crash when conditions are added'

Cleanup activating of widget loaded from xmi file.

BUG:414759
FIXED-IN:2.30.0 (KDE Applications 19.12.0)